Bug 80446 Importing Outlook Contacts doesn't import email addresses, r=bienvenu, sr=mscott