mailnews/import/outlook/src/MapiApi.cpp
@@ -622,10 +622,17 @@ void CMapiApi::ListProperties( LPMAPIPROP lpProp, BOOL getValues)
 		MAPI_TRACE0( "    Unable to retrieve property list\n");
 		return;
 	}
+  ULONG count = 0;
+  LPMAPINAMEID FAR * lppPropNames;
+  SPropTagArray		tagArray;
+  LPSPropTagArray lpTagArray = &tagArray;
+  tagArray.cValues = (ULONG)1;
 	nsCString	desc;
 	for (ULONG i = 0; i < pArray->cValues; i++) {
 		GetPropTagName( pArray->aulPropTag[i], desc);
 		if (getValues) {
+      tagArray.aulPropTag[0] = pArray->aulPropTag[i];
+      hr = lpProp->GetNamesFromIDs(&lpTagArray, nsnull, 0, &count, &lppPropNames);  
 			LPSPropValue pVal = GetMapiProperty( lpProp, pArray->aulPropTag[i]);
 			if (pVal) {
 				desc += ", ";
@@ -636,7 +643,28 @@ void CMapiApi::ListProperties( LPMAPIPROP lpProp, BOOL getValues)
 		MAPI_TRACE2( "    Tag #%d: %s\n", (int)i, (const char *)desc);
 	}
 
-	MAPIFreeBuffer( pArray);
+  MAPIFreeBuffer( pArray);
+}
+
+ULONG CMapiApi::GetEmailPropertyTag(LPMAPIPROP lpProp, LONG nameID)
+{
+static GUID emailGUID = {
+   0x00062004, 0x0000, 0x0000, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x46
+};
+
+  MAPINAMEID mapiNameID;
+  mapiNameID.lpguid = &emailGUID;
+  mapiNameID.ulKind = MNID_ID;
+  mapiNameID.Kind.lID = nameID;
+
+  LPMAPINAMEID lpMapiNames = &mapiNameID;
+  LPSPropTagArray lpMailTagArray = nsnull;
+
+  HRESULT result = lpProp->GetIDsFromNames(1L, &lpMapiNames, 0, &lpMailTagArray);
+  if (result == S_OK)
+    return lpMailTagArray->aulPropTag[0];
+  else
+    return 0L;
 }
 
 BOOL CMapiApi::HandleHierarchyItem( ULONG oType, ULONG cb, LPENTRYID pEntry)
@@ -1829,7 +1857,4 @@ BOOL CMapiFolderContents::GetNext( ULONG *pcbEid, LPENTRYID *ppEid, ULONG *poTyp
 
 	return( TRUE);
 }
-
-
-
 
